@@ -2,176 +2,180 @@ package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.Booking;
 import ru.practicum.shareit.booking.BookingRepository;
-import ru.practicum.shareit.booking.dto.BookingMapper;
-import ru.practicum.shareit.exception.ConditionsNotMetException;
+import ru.practicum.shareit.booking.BookingStatus;
+import ru.practicum.shareit.booking.dto.BookingDateDTO;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.exception.ValidationException;
 import ru.practicum.shareit.user.User;
 import ru.practicum.shareit.user.UserRepository;
 
 import java.time.LocalDateTime;
-import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class ItemServiceImpl implements ItemService, CommentService {
-
-    private final ItemRepository itemRepositoryDb;
-    private final UserRepository userRepositoryDb;
-    private final ItemMapper itemMapper;
+@Transactional(readOnly = true)
+public class ItemServiceImpl implements ItemService {
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
     private final BookingRepository bookingRepository;
-    private final BookingMapper bookingMapper;
     private final CommentRepository commentRepository;
-    private final CommentMapper commentMapper;
 
     @Override
-    public ItemDto create(long userId, ItemDto itemDto) {
-        if (userRepositoryDb.findById(userId).isEmpty()) {
-            throw new NotFoundException("Пользователь не найден");
-        }
+    @Transactional
+    public ItemResponseDTO createItem(Long ownerId, ItemRequestDTO itemDTO) {
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с ID " + ownerId + " не найден"));
 
-        User owner = userRepositoryDb.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
-
-        Item item = itemMapper.mapToItem(itemDto);
-        item.setOwner(owner);
-
-        Item savedItem = itemRepositoryDb.save(item);
-
-        return itemMapper.mapToItemDto(savedItem);
+        Item item = ItemMapper.toItem(itemDTO, owner);
+        Item savedItem = itemRepository.save(item);
+        return ItemMapper.toItemResponseDTO(savedItem);
     }
 
     @Override
-    public ItemDto update(long userId, long itemId, ItemDto itemDto) {
-        userRepositoryDb.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+    @Transactional
+    public ItemResponseDTO updateItem(Long itemId, Long ownerId, ItemUpdateDTO updateItem) {
+        Item existingItem = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Вещь не найдена: " + itemId));
 
-        Item item = itemRepositoryDb.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
-
-        if (!Objects.equals(item.getOwner().getId(), userId)) {
+        if (!existingItem.getOwner().getId().equals(ownerId)) {
             throw new NotFoundException("Пользователь не является владельцем вещи");
         }
 
-        if (itemDto.getName() != null) {
-            item.setName(itemDto.getName());
-        }
+        User owner = existingItem.getOwner();
+        Item newItem = ItemMapper.toItemFromUpdate(updateItem, owner, itemId);
+        newItem = updateIfNotNull(newItem, existingItem);
+        Item updatedItem = itemRepository.save(newItem);
+        return ItemMapper.toItemResponseDTO(updatedItem);
+    }
 
-        if (itemDto.getDescription() != null) {
-            item.setDescription(itemDto.getDescription());
-        }
 
-        if (itemDto.getAvailable() != null) {
-            item.setAvailable(itemDto.getAvailable());
-        }
-
-        Item saved = itemRepositoryDb.save(item);
-
-        return itemMapper.mapToItemDto(saved);
+    @Override
+    public ItemResponseDTO getItemById(Long itemId) {
+        return itemRepository.findById(itemId)
+                .map(ItemMapper::toItemResponseDTO)
+                .orElseThrow(() -> new NotFoundException("Вещь не найдена: " + itemId));
     }
 
     @Override
-    public ItemDto getItemById(long itemId) {
-        Item item = itemRepositoryDb.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
+    public List<ItemResponseDTO> getAllItemsByOwner(Long ownerId) {
+        List<Item> items = itemRepository.findByOwnerIdOrderByIdAsc(ownerId);
+        List<Long> itemIds = items.stream()
+                .map(Item::getId)
+                .collect(Collectors.toList());
+        LocalDateTime now = LocalDateTime.now();
 
-        return itemMapper.mapToItemDto(item);
-    }
+        Map<Long, Booking> lastBookingsMap = bookingRepository.findLastBookingsForItems(itemIds, now)
+                .stream()
+                .collect(Collectors.toMap(
+                        booking -> booking.getItem().getId(),
+                        booking -> booking,
+                        (existing, replacement) -> existing
+                ));
 
-    @Override
-    public Collection<ItemDto> getItemsByOwner(long userId) {
-        userRepositoryDb.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
-
-        List<Item> items = itemRepositoryDb.findByOwnerId(userId);
+        Map<Long, Booking> nextBookingsMap = bookingRepository.findNextBookingsForItems(itemIds, now)
+                .stream()
+                .collect(Collectors.toMap(
+                        booking -> booking.getItem().getId(),
+                        booking -> booking,
+                        (existing, replacement) -> existing
+                ));
 
         return items.stream()
                 .map(item -> {
+                    ItemResponseDTO dto = ItemMapper.toItemResponseDTO(item);
+                    Long itemId = item.getId();
 
-                    ItemDto dto = itemMapper.mapToItemDto(item);
+                    Booking lastBooking = lastBookingsMap.get(itemId);
+                    if (lastBooking != null) {
+                        dto.setLastBooking(
+                                BookingDateDTO.builder()
+                                        .id(lastBooking.getId())
+                                        .bookerId(lastBooking.getBooker().getId())
+                                        .build()
+                        );
+                    }
 
-                    dto.setLastBooking(
-                            bookingMapper.mapToBookingResponseDto(
-                                    bookingRepository.findLastBooking(item.getId(), LocalDateTime.now())
-                                            .orElse(null)
-                            )
-                    );
-
-                    dto.setNextBooking(
-                            bookingMapper.mapToBookingResponseDto(
-                                    bookingRepository.findNextBooking(item.getId(), LocalDateTime.now())
-                                            .orElse(null)
-                            )
-                    );
+                    Booking nextBooking = nextBookingsMap.get(itemId);
+                    if (nextBooking != null) {
+                        dto.setNextBooking(
+                                BookingDateDTO.builder()
+                                        .id(nextBooking.getId())
+                                        .bookerId(nextBooking.getBooker().getId())
+                                        .build()
+                        );
+                    }
 
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Collection<ItemDto> searchByText(String text) {
-        if (text == null || text.isBlank()) {
-            return List.of();
+    public List<ItemResponseDTO> searchAvailableItems(String text) {
+        if (text == null || text.trim().isEmpty()) {
+            return Collections.emptyList();
         }
 
-        return itemRepositoryDb.searchItemsByText(text)
-                .stream()
-                .map(itemMapper::mapToItemDto)
-                .toList();
+        return itemRepository.searchAvailableItems(text.toLowerCase()).stream()
+                .map(ItemMapper::toItemResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public CommentResponseDto createComment(long userId, long itemId, CommentDto commentDto) {
-        User user = userRepositoryDb.findById(userId)
+    @Transactional
+    public void deleteItem(Long itemId) {
+        if (!itemRepository.existsById(itemId)) {
+            throw new NotFoundException("Вещь не найдена: " + itemId);
+        }
+        itemRepository.deleteById(itemId);
+    }
+
+    @Override
+    @Transactional
+    public CommentResponseDTO addComment(Long userId, Long itemId, String text) {
+        User author = userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
 
-        Item item = itemRepositoryDb.findById(itemId)
+        Item item = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
 
-        bookingRepository.findCompletedBookingByUserAndItem(userId, itemId)
-                .orElseThrow(() -> new ConditionsNotMetException("Комментарий можно оставить только после бронирования"));
+        boolean hasBooking = bookingRepository
+                .findByItemIdAndBookerIdAndEndBefore(itemId, userId, LocalDateTime.now())
+                .stream()
+                .anyMatch(booking -> booking.getStatus() == BookingStatus.APPROVED);
+
+        if (!hasBooking) {
+            throw new ValidationException("Вы не можете оставить комментарий, так как не арендовали вещь");
+        }
 
         Comment comment = Comment.builder()
-                .text(commentDto.getText())
-                .author(user)
+                .text(text)
                 .item(item)
+                .author(author)
                 .created(LocalDateTime.now())
                 .build();
 
-        Comment save = commentRepository.save(comment);
-        return commentMapper.mapToCommentResponseDto(save);
+        commentRepository.save(comment);
+        return CommentMapper.toDTO(comment);
     }
 
-    @Override
-    public Collection<ItemDto> getCommentsByItemId(long userId, long itemId) {
-        userRepositoryDb.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
-
-        Item item = itemRepositoryDb.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
-
-        ItemDto itemDto = itemMapper.mapToItemDto(item);
-
-        List<CommentResponseDto> comments = commentRepository.findByItemId(itemId).stream()
-                .map(commentMapper::mapToCommentResponseDto)
-                .toList();
-        itemDto.setComments(comments);
-
-        itemDto.setLastBooking(
-                bookingMapper.mapToBookingResponseDto(
-                        bookingRepository.findLastBooking(itemId, LocalDateTime.now())
-                                .orElse(null)
-                )
-        );
-        itemDto.setNextBooking(
-                bookingMapper.mapToBookingResponseDto(
-                        bookingRepository.findNextBooking(itemId, LocalDateTime.now())
-                                .orElse(null)
-                )
-        );
-        return List.of(itemDto);
+    private Item updateIfNotNull(Item newItem, Item existingItem) {
+        if (newItem.getName() != null) {
+            existingItem.setName(newItem.getName());
+        }
+        if (newItem.getDescription() != null) {
+            existingItem.setDescription(newItem.getDescription());
+        }
+        if (newItem.getAvailable() != null) {
+            existingItem.setAvailable(newItem.getAvailable());
+        }
+        return existingItem;
     }
 }
